# assignment1-basics

./: pyproject.toml  run_bpe_training.py
cs336_basics/: bpe_tokenizer.py
experiment/: run_bpe_training.py
rust_bpe_optimizer/: Cargo.toml  pyproject.toml
rust_bpe_optimizer/src/: lib.rs
tests/: adapters.py
